Resolved file issue

--- a/login_polish.html
+++ b/login_polish.html
@@ -47,14 +47,14 @@
   <div class="first">
     <div class="address">
       <h1 class="email">Adres e-mail</h1>
-      <input placeholder="Enter Email">
+      <input placeholder="Wpisz E-mail">
     </div>
   </div>
 
   <div class="second">
     <div class="password">
       <h1 class="pass">Hasło</h1>
-      <input placeholder="Enter Password">
+      <input placeholder="Wpisz Hasło">
     </div>
   </div>
 
